# transport_logistics

./: .env.sample  pyproject.toml
company/: forms.py  models.py  urls.py  views.py
company/templates/company/: driver_confirm_delete.html  driver_detail.html  driver_form.html  drivers_list.html  vehicle_confirm_delete.html  vehicle_form.html  vehicles_list.html
config/: settings.py  urls.py
logistics/: forms.py  models.py  services.py  urls.py  views.py
logistics/templates/logistics/: base.html  cities_list.html  city_confirm_delete.html  city_form.html  home.html  itineraries_list.html  itineraries_plan_list.html  itinerary_confirm_delete.html  itinerary_form.html  itinerary_update.html
static/css/: blog.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_detail.html  user_form.html
